2008-02-15 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/RelationView.py
	* src/DataViews/PedigreeView.py
	* src/ReportBase/_ReportUtils.py
	* src/Editors/_EditPerson.py
	* src/Editors/_EditMediaRef.py
	* src/DisplayTabs/_GalleryTab.py: also correct wrong popup menu
	* src/plugins/Summary.py
	* src/plugins/WriteCD.py
	* src/plugins/IndivComplete.py
	* src/plugins/NarrativeWeb.py
	* src/plugins/WritePkg.py
	* src/plugins/GVFamilyLines.py
	* src/plugins/DefaultGramplets.py
	* src/plugins/SimpleBookTitle.py
	* src/plugins/Check.py
	* src/plugins/GVRelGraph.py
	* src/plugins/FamilyLines.py
	* src/Selectors/_SelectObject.py
	* src/GrampsDbUtils/_WriteGedcom.py
	#1787, #1208: use relative path correctly

2008-02-18  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/GrampsDbUtils/_GedcomParse.py: remove encode_filename() as filename 
	is already unicode encoded.
	* src/GrampsDbUtils/_GrampsDbWRFactories.py: doc fix
	* src/GrampsDbUtils/_ReadGedcom.py: doc and pylint fixes
	* src/GrampsDbUtils/importdbdir.py: pep8 fix  ''' --> """
	* src/ArgHandler.py: in method cl_import(self, filename, format): add call 
	filename = Utils.get_unicode_path(filename) before calling 
	ReadGedcom._import2(...,filename,...). +pylint fixes
	* src/DbLoader.py: doc fix. change variable choose to choose_db_dialog

2008-02-18  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/DataViews/PersonView.py
	* src/ViewManager.py
	* src/GrampsCfg.py
	* src/plugins/WriteCD.py
	* src/plugins/FindDupes.py
	* src/Merge/_MergePerson.py
	* src/DbManager.py
	* src/ArgHandler.py
	* src/docgen/HtmlDoc.py
	* src/DbLoader.py
	use from QuestionDialog import ErrorDialog etc to bring in line with
	rest of gramps
	* src/Editors/_EditPrimary.py: EditPrimary._uses_duplicate_id() check
	for duplicates and give error dialog if id is already used. #0001347
	* src/Editors/_EditFamily.py: EditFamily.__do_save(), add call to 
	_uses_duplicate_id(). #0001347 
