@@ -26,7 +26,7 @@
 #
 # $Id$
 
-"""Reports/Graphical Reports/Statistics Chart..."""
+"""Reports/Graphical Reports/Statistics Report..."""
 
 #------------------------------------------------------------------------
 #
@@ -899,7 +899,7 @@ register_report(
     report_class = StatisticsChart,
     options_class = StatisticsChartOptions,
     modes = MODE_GUI | MODE_BKI | MODE_CLI,
-    translated_name = _("Statistics Chart..."),
+    translated_name = _("Statistics Report..."),
     status = (_("Stable")),
     author_name="Eero Tamminen",
     author_email="",
